--- a/app/src/main/res/layout/activity_recording.xml
+++ b/app/src/main/res/layout/activity_recording.xml
@@ -47,6 +47,11 @@
 
     </LinearLayout>
 
+        <Switch
+            android:id="@+id/swRecord"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Voice Record " />
     </LinearLayout>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
