--- a/app/src/main/res/layout/activity_recording.xml
+++ b/app/src/main/res/layout/activity_recording.xml
@@ -14,56 +14,60 @@
         android:orientation="vertical"
         android:padding="0dp">
 
+
         <VideoView
             android:id="@+id/record_view"
             android:layout_width="wrap_content"
             android:layout_height="240dp"
             android:layout_marginBottom="40dp" />
 
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/record_stop"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="녹음중지"/>
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/record_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="녹음시작" />
+            <Button
+                android:id="@+id/record_stop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="녹음중지" />
 
-        <Button
-            android:id="@+id/record_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="재생"/>
+            <Button
+                android:id="@+id/record_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="녹음시작" />
 
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/play_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:src="@drawable/playbutton" />
 
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/play_stop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:padding="0sp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/pause" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/main_bottom_navigation"
+        </LinearLayout>
+
+        <SeekBar
+            android:id="@+id/seekBar1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/colorWhiteBlue"
-            app:itemIconTint="@color/colorWhite"
-            app:itemTextColor="@color/colorWhite"
-            app:layout_behavior="tech.thdev.app.view.BottomNavigationBehavior"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_fl_container"
-            app:menu="@menu/bottom_menu"
-            android:layout_marginTop="10dp"/>
+            android:layout_below="@+id/button4"
+            android:layout_alignLeft="@+id/button4"
+            android:layout_marginTop="18dp" />
+
+
+
+    </LinearLayout>
+
 
 
 </FrameLayout>
