--- a/app/src/main/res/layout/activity_proxydriver.xml
+++ b/app/src/main/res/layout/activity_proxydriver.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorWhite"
+    android:id="@+id/proxyDriver_activity"
     tools:context=".MapActivity">
 
     <LinearLayout
