--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -140,6 +140,19 @@
         app:pressedTranslationZ="12dp"
         />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_stop_goHome"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_marginLeft="15sp"
+        android:layout_marginBottom="90dp"
+        android:src="@drawable/ic_stop_red_24dp"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        />
+
     <include
         layout="@layout/view_loader"
         android:layout_width="match_parent"
